@@ -1,5 +1,16 @@
 2007-01-23  Michael Dominic Kostrzewa  <michael.kostrzewa@nokia.com> 
 
+	* src/hildon-banner.c: Fixing documentation for HildonBanner.
+
+	* src/hildon-caption.c:
+	* src/hildon-caption.h: Fixing documentation for HildonCaption.
+
+	* src/hildon-code-dialog.c: Fixing documentation for HildonCodeDialog.
+
+	* src/hildon-controlbar.c: Fixing docuemtnation for HildonControlbar.
+
+2007-01-23  Michael Dominic Kostrzewa  <michael.kostrzewa@nokia.com> 
+
 	* src/hildon-banner.c:
 	* src/hildon-banner.h: Fixing documentation. Removing the n-lines
 	helper function.
